--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "postgresql"]
 	path = postgresql
 	url = http://github.com/puppetlabs/puppet-postgresql.git
+[submodule "redis"]
+	path = redis
+	url = https://github.com/thomasvandoren/puppet-redis.git
