--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "redis"]
 	path = redis
 	url = https://github.com/thomasvandoren/puppet-redis.git
+[submodule "jenkins"]
+	path = jenkins
+	url = https://github.com/rtyler/puppet-jenkins.git
+[submodule "apt"]
+	path = apt
+	url = https://github.com/puppetlabs/puppetlabs-apt.git
